Add front end support for container migration
Adjust front end to clearly identify container with bolding/green
circle. Currently only clearly marks LXC containers, when
Docker/OpenVZ/etc support is added the front end should also be
updated. Font adjustments and similar aesthetic changes are made so
the web page resembles demos given in the past.

--- a/webgui/static/criugui.css
+++ b/webgui/static/criugui.css
@@ -47,10 +47,26 @@ svg {
   stroke-width: 1px;
 }
 
+.node circle.lxc-circle {
+    fill: #009933;
+    stroke: #003300;
+}
+
+.node text.lxc-label {
+    fill: #009933;
+    font-family: "Liberation Mono", monospace;
+    text-shadow:
+      -1px -1px 0 #fff,
+      -1px 1px 0  #fff,
+       1px -1px 0 #fff,
+       1px 1px 0 #fff;
+    font-weight: bold;
+}
+
 .node text.node-label {
   fill: #333;
   font-family: "Liberation Mono", monospace;
-  font-size: 10pt;
+  font-size: 12pt;
 }
 
 .active-node text.node-label {
